package org.example;

public class Movie extends Media {
    public Movie(String title, String category, String release, int rating) {
        super(title, category, release, rating);
    }

    @Override
    public String toString() {
        return super.toString();
    }
}
